# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-guardrail_env"
version = "0.1.1"
description = "Guardrail Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m guardrail_env.server.app
server = "guardrail_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["guardrail_env", "guardrail_env.server"]
package-dir = { "guardrail_env" = ".", "guardrail_env.server" = "server" }
